--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 checkpoints/
+checkpoints/**
 __pycache__/
+__pycache__/**
 all_code.py
 .pytest_cache/
+.pytest_cache/**
 scopone_checkpoint_team0.pth
 scopone_checkpoint_team1.pth
