--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ gym==0.26.2
 
 # Utilities
 tqdm>=4.66
+numba>=0.57
 
 # Reporting/benchmark
 pandas>=1.5
@@ -17,3 +18,4 @@ pytest>=7.0
 
 # Optional (used with fallback in observation.compute_rank_probabilities_by_player)
 scipy>=1.10
+tensorboard>=2.12
