Update documentation and logging for improved clarity and usability. Add tmux commands for session management and enhance logging in training scripts to handle non-finite values gracefully.

--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,7 @@ pytest>=7.0
 # Optional (used with fallback in observation.compute_rank_probabilities_by_player)
 scipy>=1.10
 tensorboard>=2.12
+
+# Extras
+pygame>=2.5
+# tmux (system package; install via OS package manager, not via pip)
