Add tuning_results.json to .gitignore and update environment variable handling in tune_pretrain_hparams.py
- Added tuning_results.json to the .gitignore file to prevent tracking of tuning results.
- Enhanced environment variable management in tune_pretrain_hparams.py to mirror configurations from main.py, improving consistency in training and evaluation settings.

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ profiling_report.txt
 .vscode/settings.json
 .gitignore
 profile_trace.json
+tuning_results.json
 
 # TensorFlow / TensorBoard logs
 logs/
