Enhance reward handling and add tests for training utilities
- Update cumulative rewards visibility in ScoponeEnvMA.
- Silence DeprecationWarnings related to protobuf in pytest configuration.
- Introduce new tests for tensor operations and reward validation in training.
- Implement additional tests for agent evaluation and trajectory collection.

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,5 @@
 [pytest]
 filterwarnings =
     ignore:pkg_resources is deprecated as an API:DeprecationWarning:pygame.pkgdata
+    ignore:Type google\.protobuf\.pyext\._message\..*PyType_Spec:DeprecationWarning
 
